--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "nodemon": "^2.0.7",
+    "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   }
 }
