--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
