--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
+    "@babel/core": "7.19.3",
+    "@babel/node": "7.19.1",
+    "@babel/preset-env": "7.19.3",
     "nodemon": "^2.0.7",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.2.0"
